--- a/CountdownPresets/res/layout/fragment_countdown.xml
+++ b/CountdownPresets/res/layout/fragment_countdown.xml
@@ -33,11 +33,10 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/txtTimeLeft"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
-        android:text="@string/hello_world"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </LinearLayout>
