--- a/CountdownPresets/res/layout/activity_countdown.xml
+++ b/CountdownPresets/res/layout/activity_countdown.xml
@@ -1,8 +1,9 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="ro.pagepo.countdownpresets.CountdownActivity"
     tools:ignore="MergeRootFrame" >
 
@@ -12,5 +13,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</ScrollView>
-
+</LinearLayout>
