--- a/CountdownPresets/res/layout/fragment_countdown.xml
+++ b/CountdownPresets/res/layout/fragment_countdown.xml
@@ -1,14 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
+    android:id="@+id/countdownContainerLayoutxxx"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ro.pagepo.countdownpresets.CountdownActivity$PlaceholderFragment" >
+    tools:context=".CountDownJobFragment" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,24 +19,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
-            android:text="@string/but_stop_timer" />
+            android:layout_weight="0.5"
+            android:text="@string/but_restart_timer" />
 
         <Button
             android:id="@+id/butCancelTimer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:text="@string/but_cancel_timer" />
-
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/txtTimeLeft"
+    <FrameLayout
+        android:id="@+id/FrameLayout1"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_height="fill_parent" >
+
+        <TextView
+            android:id="@+id/txtTimeLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/action_edit_preset"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="40sp" />
+
+    </FrameLayout>
 
 </LinearLayout>
