--- a/CountdownPresets/res/layout/activity_countdown.xml
+++ b/CountdownPresets/res/layout/activity_countdown.xml
@@ -9,7 +9,7 @@
 
     <fragment
         android:id="@+id/fragmentCountDown"
-        android:name="ro.pagepo.countdownpresets.CountDownJobFragment"
+        android:name="ro.pagepo.countdownpresets.fragments.CountDownJobFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
