--- a/CountdownPresets/res/values/styles.xml
+++ b/CountdownPresets/res/values/styles.xml
@@ -16,5 +16,28 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <style name="ButtonText">
+    <item name="android:layout_width">fill_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:textColor">#ffffff</item>
+    <item name="android:gravity">center</item>
+    <item name="android:layout_margin">3dp</item>
+    <item name="android:textSize">30sp</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:shadowColor">#000000</item>
+    <item name="android:shadowDx">1</item>
+    <item name="android:shadowDy">1</item>
+    <item name="android:shadowRadius">2</item>
+</style>
 
+        <style name="but_smalltext" parent="ButtonText">
+    <item name="android:textSize">20sp</item>
+</style>
+
+                <style name="but_reallysmalltext" parent="ButtonText">
+    <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#CCCCCC</item>
+            <item name="android:shadowColor">#C3C3C3</item>
+</style>
 </resources>
