--- a/CountdownPresets/res/menu/timers.xml
+++ b/CountdownPresets/res/menu/timers.xml
@@ -3,9 +3,9 @@
     tools:context="ro.pagepo.countdownpresets.TimersActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_show_about"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_menu_about"/>
 
 </menu>
