--- a/CountdownPresets/res/layout/timer_preset_dialog_fragment.xml
+++ b/CountdownPresets/res/layout/timer_preset_dialog_fragment.xml
@@ -37,19 +37,43 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:text="@string/lbl_preset_time"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <EditText
-            android:id="@+id/txtTimerPresetDialogMinutes"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="time" >
+            android:layout_height="wrap_content" >
 
-            <requestFocus />
-        </EditText>
+            <NumberPicker
+                android:id="@+id/numberMinutes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+
+            </NumberPicker>
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/lbl_time_min"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <NumberPicker
+                android:id="@+id/numberSeconds"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/lbl_time_sec"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        </LinearLayout>
 
     </TableRow>
 
